ms-notifications/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-notifications
  namespace: client-ms-notifications
spec:
  podSelector:
    matchLabels:
      app: ms-notifications
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ms-notifications
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 5671
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15964
